feat: add basic styling

--- a/src/app.html
+++ b/src/app.html
@@ -4,9 +4,13 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			href="https://api.fontshare.com/v2/css?f[]=pilcrow-rounded@400,500,600,700,900&display=swap"
+			rel="stylesheet"
+		/>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="size-7">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
